# RMDP_Algorithm

./: .gitignore  .webui_secret_key  BIG_Test.py  Benchmark (version 1).xlsx  Benchmark.xlsx  Claude_prep.py  License  Pseudo-Code for ACA.txt  README.md  TO_do.md  TO_do.txt  algorithm_benchmarking.py  config.yaml  datatypes.py  datatypes_2.py  documentation.txt  hyperparameter_tuning.py  main.py  plotly_test.py  pyproject.toml  rl_hyperparameter_tuning.py  test_bundling.py  train.py  train_rl.py  tune_buffer.py
abb/speed_analysis_results_v2/: segment_speed_stats.csv
data/bundling_tuning/: vehicle_buffer_tuning.csv
data/models/: rl_aca_20250316_135450.pt  rl_aca_20250316_143248.pt  rl_aca_20250316_144005.pt  rl_aca_20250316_145312.pt  rl_aca_20250316_145917.pt  rl_aca_20250316_150353.pt  rl_aca_20250316_162430.pt  rl_aca_20250316_162440.pt  rl_aca_20250316_162450.pt  rl_aca_20250316_162506.pt  rl_aca_20250316_162517.pt  rl_aca_20250316_162539.pt  rl_aca_20250316_162544.pt  (+979 more)
data_analysis/: bundling_example.py  scatter_plot - Smalll.py
environment/: demand_pattern.py  environment.py  location_manager.py  main.py  order_generator.py  order_manager.py  order_validation.py  state_handler.py  vehicle_manager.py  vehicle_status_handling.py  visualization.py
nn_animation/: animation.py
old/: route_processing.py  route_processor.py
presentation_visualizations/: scatter_plot - BIG.py
speed_analysis_results/: courier_consistency.csv  courier_efficiency.csv  courier_speed_stats.csv  hourly_speed_stats.csv  segment_comparison.csv  segment_speed_stats.csv
(+356 files in other folders)
