[tool.poetry]
name = "rmdp_rl_project"
version = "0.1.0"
description = "RL project for Restaurant Meal Delivery Problem"
authors = ["Your Name <your.email@example.com>"]
python = "^3.8"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"
gym = "^0.26.0"
numpy = "^1.23.0"
yaml = "^6.0" # If you need to load YAML files

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
